[Update] update new server