@@ -1,5 +1,6 @@
 package com.nighthunt.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -12,20 +13,24 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
+    @Value("${app.cors.allowed-origins:https://localhost:3000,https://localhost:8443}")
+    private String allowedOriginsRaw;
+
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Allow all origins for development (change in production)
-        config.setAllowedOriginPatterns(List.of("*"));
+
+        List<String> allowedOrigins = Arrays.asList(allowedOriginsRaw.split(","));
+        config.setAllowedOrigins(allowedOrigins);
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
-        
+
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
 }
+
 
